--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -111,6 +111,13 @@
   .scrollbar-hide::-webkit-scrollbar {
     display: none;
   }
+  
+  .line-clamp-3 {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
 }
 
 /* Custom scrollbar for webkit browsers */
